fixed full-stop in lines

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <td>
         <h1>Lisan Hossain</h1>
         <p><em>Self Motivated and self-taught <strong>programmer and developer</strong></em></p>
-        <p>I am a python and Website developer.I love programming</p>
+        <p>I am a python and Website developer.I love programming.</p>
       </td>
     </tr>
   </table>
   <hr>
-  <h3>I love to code in Python and api development</h3>
+  <h3>I love to code in Python and api development.</h3>
   <ul>
     <li>Python object orienetd programming.</li>
     <li>Python Gui programming.</li>
