full-stop fixed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td> <img src="profile-modified.png" width="200px" height="200px" alt="Lisan Hossain Image"></td>
       <td>
         <h1>Lisan Hossain</h1>
-        <p><em>Self Motivated and self-taught <strong>programmer and developer</strong></em></p>
+        <p><em>Self Motivated and self-taught <strong>programmer and developer.</strong></em></p>
         <p>I am a python and Website developer.I love programming.</p>
       </td>
     </tr>
@@ -24,7 +24,7 @@
     <li>Python Gui programming.</li>
     <li>Python api programming.</li>
     <li>Python turle programming.</li>
-    <li>HTML,CSS,JavaScript</li>
+    <li>HTML,CSS,JavaScript.</li>
   </ul>
   <hr>
   <a href="hobbies.html">My hobbies</a>
