added a new job in profile

--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
     <tbody>
       <tr>
         <td>2018-08-15</td>
-        <td>Fruit Shop</td>
+        <td>Fruit Shop.</td>
       </tr>
       <tr>
         <td>2020-08-15</td>
-        <td>Construction</td>
+        <td>Construction.</td>
+      </tr>
+      <tr>
+        <td>2021-08-15</td>
+        <td>Glass Balastrade.</td>
       </tr>
     </tbody>
     <tfoot>
